PoD: Differences of times

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@
 /.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_common_1_3_72.xml
 /.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_jdk7_1_3_72.xml
 /.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_jdk8_1_3_72.xml
+/Problems/Difference of times/task-info.yaml
+/Problems/Difference of times/task-remote-info.yaml
