Solved PoD: Differences of times

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@
 /.idea/libraries/Gradle__org_jetbrains_kotlin_kotlin_stdlib_jdk8_1_3_72.xml
 /Problems/Difference of times/task-info.yaml
 /Problems/Difference of times/task-remote-info.yaml
+/.idea/modules/Problems/Difference of times/ASCII_Text_Signature.Problems-Difference_of_times.iml
+/.idea/modules/Problems/Difference of times/ASCII_Text_Signature.Problems-Difference_of_times.main.iml
+/.idea/modules/Problems/Difference of times/ASCII_Text_Signature.Problems-Difference_of_times.test.iml
