Solving PoD: The roots of equation.

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,5 @@
 /.idea/modules/Problems/Difference of times/ASCII_Text_Signature.Problems-Difference_of_times.iml
 /.idea/modules/Problems/Difference of times/ASCII_Text_Signature.Problems-Difference_of_times.main.iml
 /.idea/modules/Problems/Difference of times/ASCII_Text_Signature.Problems-Difference_of_times.test.iml
+/Problems/The roots of equation/task-info.yaml
+/Problems/The roots of equation/task-remote-info.yaml
