Solved PoD: The roots of the equation.

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,6 @@
 /.idea/modules/Problems/Difference of times/ASCII_Text_Signature.Problems-Difference_of_times.test.iml
 /Problems/The roots of equation/task-info.yaml
 /Problems/The roots of equation/task-remote-info.yaml
+/.idea/modules/Problems/The roots of equation/ASCII_Text_Signature.Problems-The_roots_of_equation.iml
+/.idea/modules/Problems/The roots of equation/ASCII_Text_Signature.Problems-The_roots_of_equation.main.iml
+/.idea/modules/Problems/The roots of equation/ASCII_Text_Signature.Problems-The_roots_of_equation.test.iml
