Solving PoD: Fizz Buzz.

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,5 @@
 /.idea/modules/Problems/The roots of equation/ASCII_Text_Signature.Problems-The_roots_of_equation.iml
 /.idea/modules/Problems/The roots of equation/ASCII_Text_Signature.Problems-The_roots_of_equation.main.iml
 /.idea/modules/Problems/The roots of equation/ASCII_Text_Signature.Problems-The_roots_of_equation.test.iml
+/Problems/Fizz Buzz/task-info.yaml
+/Problems/Fizz Buzz/task-remote-info.yaml
