Solved PoD: Fizz Buzz.

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@
 /.idea/modules/Problems/The roots of equation/ASCII_Text_Signature.Problems-The_roots_of_equation.test.iml
 /Problems/Fizz Buzz/task-info.yaml
 /Problems/Fizz Buzz/task-remote-info.yaml
+/.idea/modules/Problems/Fizz Buzz/ASCII_Text_Signature.Problems-Fizz_Buzz.iml
+/.idea/modules/Problems/Fizz Buzz/ASCII_Text_Signature.Problems-Fizz_Buzz.main.iml
+/.idea/modules/Problems/Fizz Buzz/ASCII_Text_Signature.Problems-Fizz_Buzz.test.iml
