--- a/.gitignore
+++ b/.gitignore
@@ -50,3 +50,5 @@
 /.idea/modules/Problems/Fizz Buzz/ASCII_Text_Signature.Problems-Fizz_Buzz.iml
 /.idea/modules/Problems/Fizz Buzz/ASCII_Text_Signature.Problems-Fizz_Buzz.main.iml
 /.idea/modules/Problems/Fizz Buzz/ASCII_Text_Signature.Problems-Fizz_Buzz.test.iml
+/Problems/The minimum value of N numbers/task-info.yaml
+/Problems/The minimum value of N numbers/task-remote-info.yaml
