--- a/.gitignore
+++ b/.gitignore
@@ -52,3 +52,6 @@
 /.idea/modules/Problems/Fizz Buzz/ASCII_Text_Signature.Problems-Fizz_Buzz.test.iml
 /Problems/The minimum value of N numbers/task-info.yaml
 /Problems/The minimum value of N numbers/task-remote-info.yaml
+/.idea/modules/Problems/The minimum value of N numbers/ASCII_Text_Signature.Problems-The_minimum_value_of_N_numbers.iml
+/.idea/modules/Problems/The minimum value of N numbers/ASCII_Text_Signature.Problems-The_minimum_value_of_N_numbers.main.iml
+/.idea/modules/Problems/The minimum value of N numbers/ASCII_Text_Signature.Problems-The_minimum_value_of_N_numbers.test.iml
