Solving Problem: Is it here?

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,5 @@
 /.idea/modules/Problems/The minimum value of N numbers/ASCII_Text_Signature.Problems-The_minimum_value_of_N_numbers.iml
 /.idea/modules/Problems/The minimum value of N numbers/ASCII_Text_Signature.Problems-The_minimum_value_of_N_numbers.main.iml
 /.idea/modules/Problems/The minimum value of N numbers/ASCII_Text_Signature.Problems-The_minimum_value_of_N_numbers.test.iml
+/Problems/Is it here/task-info.yaml
+/Problems/Is it here/task-remote-info.yaml
