--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,6 @@
 /.idea/modules/Problems/The minimum value of N numbers/ASCII_Text_Signature.Problems-The_minimum_value_of_N_numbers.test.iml
 /Problems/Is it here/task-info.yaml
 /Problems/Is it here/task-remote-info.yaml
+/.idea/modules/Problems/Is it here/ASCII_Text_Signature.Problems-Is_it_here.iml
+/.idea/modules/Problems/Is it here/ASCII_Text_Signature.Problems-Is_it_here.main.iml
+/.idea/modules/Problems/Is it here/ASCII_Text_Signature.Problems-Is_it_here.test.iml
