Solved PoD: Groundhogs at the party

--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,8 @@
 /.idea/modules/Problems/Is it here/ASCII_Text_Signature.Problems-Is_it_here.iml
 /.idea/modules/Problems/Is it here/ASCII_Text_Signature.Problems-Is_it_here.main.iml
 /.idea/modules/Problems/Is it here/ASCII_Text_Signature.Problems-Is_it_here.test.iml
+/.idea/modules/Problems/Groundhogs at the party/ASCII_Text_Signature.Problems-Groundhogs_at_the_party.iml
+/.idea/modules/Problems/Groundhogs at the party/ASCII_Text_Signature.Problems-Groundhogs_at_the_party.main.iml
+/.idea/modules/Problems/Groundhogs at the party/ASCII_Text_Signature.Problems-Groundhogs_at_the_party.test.iml
+/Problems/Groundhogs at the party/task-info.yaml
+/Problems/Groundhogs at the party/task-remote-info.yaml
