Solving Task: Balance checker.

--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,8 @@
 /.idea/modules/Problems/Groundhogs at the party/ASCII_Text_Signature.Problems-Groundhogs_at_the_party.test.iml
 /Problems/Groundhogs at the party/task-info.yaml
 /Problems/Groundhogs at the party/task-remote-info.yaml
+/Problems/Balance checker/task-info.yaml
+/Problems/Balance checker/task-remote-info.yaml
+/.idea/modules/Problems/Balance checker/ASCII_Text_Signature.Problems-Balance_checker.iml
+/.idea/modules/Problems/Balance checker/ASCII_Text_Signature.Problems-Balance_checker.main.iml
+/.idea/modules/Problems/Balance checker/ASCII_Text_Signature.Problems-Balance_checker.test.iml
