--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,7 @@
 /.idea/modules/Problems/Balance checker/ASCII_Text_Signature.Problems-Balance_checker.test.iml
 /Problems/Balance checker/out/production/classes/MainKt.class
 /Problems/Balance checker/out/production/classes/META-INF/Problems-Balance_checker.kotlin_module
+/.idea/modules/Problems/A small version of the Battleship game/ASCII_Text_Signature.Problems-A_small_version_of_the_Battleship_game.iml
+/.idea/modules/Problems/A small version of the Battleship game/ASCII_Text_Signature.Problems-A_small_version_of_the_Battleship_game.main.iml
+/.idea/modules/Problems/A small version of the Battleship game/ASCII_Text_Signature.Problems-A_small_version_of_the_Battleship_game.test.iml
+/Problems/A small version of the Battleship game/task-info.yaml
