Solving PoD: Check the sum.

--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,9 @@
 /.idea/modules/Problems/A small version of the Battleship game/ASCII_Text_Signature.Problems-A_small_version_of_the_Battleship_game.main.iml
 /.idea/modules/Problems/A small version of the Battleship game/ASCII_Text_Signature.Problems-A_small_version_of_the_Battleship_game.test.iml
 /Problems/A small version of the Battleship game/task-info.yaml
+/.idea/modules/Problems/Check the sum/ASCII_Text_Signature.Problems-Check_the_sum.iml
+/.idea/modules/Problems/Check the sum/ASCII_Text_Signature.Problems-Check_the_sum.main.iml
+/.idea/modules/Problems/Check the sum/ASCII_Text_Signature.Problems-Check_the_sum.test.iml
+/Problems/A small version of the Battleship game/out/production/classes/MainKt.class
+/Problems/A small version of the Battleship game/out/production/classes/META-INF/Problems-A_small_version_of_the_Battleship_game.kotlin_module
+/Problems/Check the sum/task-info.yaml
