--- a/.gitignore
+++ b/.gitignore
@@ -82,3 +82,6 @@
 /Problems/A small version of the Battleship game/out/production/classes/MainKt.class
 /Problems/A small version of the Battleship game/out/production/classes/META-INF/Problems-A_small_version_of_the_Battleship_game.kotlin_module
 /Problems/Check the sum/task-info.yaml
+/.idea/modules/Problems/Find the max/ASCII_Text_Signature.Problems-Find_the_max.iml
+/.idea/modules/Problems/Find the max/ASCII_Text_Signature.Problems-Find_the_max.main.iml
+/.idea/modules/Problems/Find the max/ASCII_Text_Signature.Problems-Find_the_max.test.iml
