Solved PoD: Find the max

--- a/.gitignore
+++ b/.gitignore
@@ -85,3 +85,4 @@
 /.idea/modules/Problems/Find the max/ASCII_Text_Signature.Problems-Find_the_max.iml
 /.idea/modules/Problems/Find the max/ASCII_Text_Signature.Problems-Find_the_max.main.iml
 /.idea/modules/Problems/Find the max/ASCII_Text_Signature.Problems-Find_the_max.test.iml
+/Problems/Find the max/task-info.yaml
